# Design-and-control-of-an-articulated-rover

./: README.md
RobotURDF/: CMakeLists.txt  package.xml
RobotURDF/config/: control_config.yaml  control_config_PID.yaml  joint_names_RobotURDF.yaml
RobotURDF/launch/: display.launch  gazebo.launch  main.launch  main_PID.launch
RobotURDF/meshes/: F_KFE_Link.STL  L_KFE_Link.STL  R_KFE_Link.STL
RobotURDF/src/: BasicHTM.h  CONTACT.h  CRBA_Algo.h  Composite_Inertia.h  Contact_link_update.h  DESIRED.h  EulerToRot.h  FreeModeMatrix.h  JOINT.h  Jacobian.h  JointCallback.h  LINK.h  Link_velocity_wrt_base.h  Local_Inertia.h  MEASURED.h  Model.h  Publishers.h  RNEA_Algo.h  RpX.h  SpatialSkew.h  Spatial_Inertia.h  Subscribers.h  X_transform.h  headers.h  homogeneous_transformation.h  main.cpp  model_initialization.h  pseudoInverse.h  skew.h
RobotURDF/urdf/: RobotURDF.csv  RobotURDF.urdf
